--- a/index.html
+++ b/index.html
@@ -49,6 +49,84 @@
 		  </div>
 	  </nav>
     <!-- END nav -->
+
+	<section   class="home-slider owl-carousel img" style="background-image: url(images/bg_1.jpg);">
+		<div class="slider-item">
+			<div class="overlay"></div>
+		  <div class="container">
+			<div class="row slider-text align-items-center" data-scrollax-parent="true">
+  
+			  <div class="col-md-6 col-sm-12 ftco-animate">
+				  <span class="subheading">Pizzas de Salchicha</span>
+				<h1 class="mb-4">Exelente calidad</h1>
+				<p class="mb-4 mb-md-5">¡Haz tu pedido y disfruta de una experiencia única!</p>
+				<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Ordene Ahora</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Ver Menu</a></p>
+			  </div>
+			  <div class="col-md-6 ftco-animate">
+				  <img src="images/bg_2.png" class="img-fluid" alt="">
+			  </div>
+  
+			</div>
+		  </div>
+		</div>
+  
+		<div class="slider-item">
+			<div class="overlay"></div>
+		  <div class="container">
+			<div class="row slider-text align-items-center" data-scrollax-parent="true">
+  
+			  <div class="col-md-6 col-sm-12 order-md-last ftco-animate">
+				  <span class="subheading">Las Mejores</span>
+				<h1 class="mb-4">Pizzas de Jamón y Salchicha</h1>
+				<p class="mb-4 mb-md-5">¡Haz tu pedido y disfruta de una experiencia única!</p>
+				<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Ver ahora</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Ver Menu</a></p>
+			  </div>
+			  <div class="col-md-6 ftco-animate">
+				  <img src="images/Pizza-jamon-y-salchicha.png" class="img-fluid" alt="">
+			  </div>
+  
+			</div>
+		  </div>
+		</div>
+  
+		<div class="slider-item">
+		  <div class="overlay"></div>
+		<div class="container">
+		  <div class="row slider-text align-items-center" data-scrollax-parent="true">
+  
+			<div class="col-md-6 col-sm-12 order-md-last ftco-animate">
+				<span class="subheading">Las Mejores</span>
+			  <h1 class="mb-4">Pizzas de Chorizo</h1>
+			  <p class="mb-4 mb-md-5">¡Haz tu pedido y disfruta de una experiencia única!</p>
+			  <p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Ver ahora</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Ver Menu</a></p>
+			</div>
+			<div class="col-md-6 ftco-animate">
+				<img src="images/pizzasalchicha.png" class="img-fluid" alt="">
+			</div>
+  
+		  </div>
+		</div>
+	  </div>
+  
+		<div class="slider-item" style="background-image: url(images/bg_3.jpg);">
+			<div class="overlay"></div>
+		  <div class="container">
+			<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
+  
+			  <div class="col-md-7 col-sm-12 text-center ftco-animate">
+				  <span class="subheading">Bienvenido a Doña Lucia</span>
+				<h1 class="mb-4">“Más que Comida, una Experiencia”</h1>
+				<p class="mb-4 mb-md-5">Te ofrecemos la mejor receta de pizza que usted necesita.</p>
+				<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Ver Menu</a></p>
+			  </div>
+  
+			</div>
+		  </div>
+		</div>
+  
+		
+	  </section>
+
 	<section class="ftco-about d-md-flex">
     	<div style="display: none;" class="one-half img" style="background-image: url(images/about.jpg);"></div>
     	<div class="one-half ftco-animate">
@@ -216,6 +294,7 @@
         </div>
     	</div>
     </section>
+
 	<section class="ftco-intro">
     	<div class="container-wrap">
     		<div class="wrap d-md-flex">
@@ -267,82 +346,8 @@
     		</div>
     	</div>
     </section>
-	<section style="display: none;"  class="home-slider owl-carousel img" style="background-image: url(images/bg_1.jpg);">
-		<div class="slider-item">
-			<div class="overlay"></div>
-		  <div class="container">
-			<div class="row slider-text align-items-center" data-scrollax-parent="true">
-  
-			  <div class="col-md-6 col-sm-12 ftco-animate">
-				  <span class="subheading">Pizzas de Salchicha</span>
-				<h1 class="mb-4">Exelente calidad</h1>
-				<p class="mb-4 mb-md-5">¡Haz tu pedido y disfruta de una experiencia única!</p>
-				<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Ordene Ahora</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Ver Menu</a></p>
-			  </div>
-			  <div class="col-md-6 ftco-animate">
-				  <img src="images/bg_2.png" class="img-fluid" alt="">
-			  </div>
-  
-			</div>
-		  </div>
-		</div>
-  
-		<div class="slider-item">
-			<div class="overlay"></div>
-		  <div class="container">
-			<div class="row slider-text align-items-center" data-scrollax-parent="true">
-  
-			  <div class="col-md-6 col-sm-12 order-md-last ftco-animate">
-				  <span class="subheading">Las Mejores</span>
-				<h1 class="mb-4">Pizzas de Jamón y Salchicha</h1>
-				<p class="mb-4 mb-md-5">¡Haz tu pedido y disfruta de una experiencia única!</p>
-				<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Ver ahora</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Ver Menu</a></p>
-			  </div>
-			  <div class="col-md-6 ftco-animate">
-				  <img src="images/Pizza-jamon-y-salchicha.png" class="img-fluid" alt="">
-			  </div>
-  
-			</div>
-		  </div>
-		</div>
-  
-		<div class="slider-item">
-		  <div class="overlay"></div>
-		<div class="container">
-		  <div class="row slider-text align-items-center" data-scrollax-parent="true">
-  
-			<div class="col-md-6 col-sm-12 order-md-last ftco-animate">
-				<span class="subheading">Las Mejores</span>
-			  <h1 class="mb-4">Pizzas de Chorizo</h1>
-			  <p class="mb-4 mb-md-5">¡Haz tu pedido y disfruta de una experiencia única!</p>
-			  <p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Ver ahora</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Ver Menu</a></p>
-			</div>
-			<div class="col-md-6 ftco-animate">
-				<img src="images/pizzasalchicha.png" class="img-fluid" alt="">
-			</div>
-  
-		  </div>
-		</div>
-	  </div>
-  
-		<div class="slider-item" style="background-image: url(images/bg_3.jpg);">
-			<div class="overlay"></div>
-		  <div class="container">
-			<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
-  
-			  <div class="col-md-7 col-sm-12 text-center ftco-animate">
-				  <span class="subheading">Bienvenido a Doña Lucia</span>
-				<h1 class="mb-4">“Más que Comida, una Experiencia”</h1>
-				<p class="mb-4 mb-md-5">Te ofrecemos la mejor receta de pizza que usted necesita.</p>
-				<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Ver Menu</a></p>
-			  </div>
-  
-			</div>
-		  </div>
-		</div>
-  
-		
-	  </section>
+
+	
 
     
 <!-------------------------ofertas bebidas y alimentos-->
