--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 				  <span class="subheading">Pizzas de Salchicha</span>
 				<h1 class="mb-4">Exelente calidad</h1>
 				<p class="mb-4 mb-md-5">¡Haz tu pedido y disfruta de una experiencia única!</p>
-				<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Ordene Ahora</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Ver Menu</a></p>
+				<p style="display: none;"><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Ordene Ahora</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Ver Menu</a></p>
 			  </div>
 			  <div class="col-md-6 ftco-animate">
-				  <img src="images/bg_2.png" class="img-fluid" alt="">
+				  <img src="images/R(1).png" class="img-fluid" alt="">
 			  </div>
   
 			</div>
@@ -79,7 +79,7 @@
 				  <span class="subheading">Las Mejores</span>
 				<h1 class="mb-4">Pizzas de Jamón y Salchicha</h1>
 				<p class="mb-4 mb-md-5">¡Haz tu pedido y disfruta de una experiencia única!</p>
-				<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Ver ahora</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Ver Menu</a></p>
+				<p style="display: none;"><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Ver ahora</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Ver Menu</a></p>
 			  </div>
 			  <div class="col-md-6 ftco-animate">
 				  <img src="images/Pizza-jamon-y-salchicha.png" class="img-fluid" alt="">
@@ -98,10 +98,10 @@
 				<span class="subheading">Las Mejores</span>
 			  <h1 class="mb-4">Pizzas de Chorizo</h1>
 			  <p class="mb-4 mb-md-5">¡Haz tu pedido y disfruta de una experiencia única!</p>
-			  <p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Ver ahora</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Ver Menu</a></p>
+			  <p style="display: none;"><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Ver ahora</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Ver Menu</a></p>
 			</div>
 			<div class="col-md-6 ftco-animate">
-				<img src="images/pizzasalchicha.png" class="img-fluid" alt="">
+				<img src="images/R.png" class="img-fluid" alt="">
 			</div>
   
 		  </div>
@@ -117,7 +117,7 @@
 				  <span class="subheading">Bienvenido a Doña Lucia</span>
 				<h1 class="mb-4">“Más que Comida, una Experiencia”</h1>
 				<p class="mb-4 mb-md-5">Te ofrecemos la mejor receta de pizza que usted necesita.</p>
-				<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Ver Menu</a></p>
+				<p style="display: none;"><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Ver Menu</a></p>
 			  </div>
   
 			</div>
@@ -169,7 +169,7 @@
     			</div>
     			<div class="col-lg-4 d-flex ftco-animate">
     				<div class="services-wrap d-flex">
-    					<a href="#" class="img" style="background-image: url(images/46665869315_5e6888b40b.jpg);"></a>
+    					<a href="#" class="img" style="background-image: url(images/Pizza-de-Chorizo.jpg);"></a>
     					<div class="text p-4">
     						<h3>Pizza con Queso Extra y Chorizo</h3>
     						<p>Saborea la combinación perfecta de queso extra y chorizo en cada bocado. Una delicia que no puedes dejar pasar.</p>
@@ -216,7 +216,7 @@
         			</div>
         		</div>
         		<div class="pricing-entry d-flex ftco-animate">
-        			<div class="img" style="background-image: url(images/pizza-2.jpg);"></div>
+        			<div class="img" style="background-image: url(images/Pizza-de-Chorizo.jpg);"></div>
         			<div class="desc pl-3">
 	        			<div class="d-flex text align-items-center">
 	        				<h3><span>Pizza de Chorizo</span></h3>
@@ -337,7 +337,7 @@
 	    			</div>
 	    		</div>
 	    		<div style="display: none;" class="social d-md-flex pl-md-5 p-4 align-items-center">
-	    			<ul class="social-icon">
+	    			<ul style="display: none;" class="social-icon">
               <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
               <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
               <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
@@ -399,7 +399,7 @@
 						  </div>
 						  <div class="col-md-4 text-center">
 							  <div class="menu-wrap">
-								  <a href="#" class="menu-img img mb-4" style="background-image: url(images/46665869315_5e6888b40b.jpg);"></a>
+								  <a href="#" class="menu-img img mb-4" style="background-image: url(images/Pizza-de-Chorizo.jpg);"></a>
 								  <div class="text">
 									  <h3><a href="#">Pizza de Chorizo</a></h3>
 									  <p>Queso extra y chorizo en cada bocado. Una delicia que no puedes dejar pasar.</p>
@@ -436,13 +436,50 @@
 								  </div>
 							  </div>
 						  </div>
+
+						  <div class="col-md-4 text-center">
+							<div class="menu-wrap">
+								<a href="#" class="menu-img img mb-4" style="background-image: url(images/cervezaalmara.jpg);"></a>
+								<div class="text">
+									<h3><a href="#">Cerveza Almara</a></h3>
+									<p>Disfruta de la frescura y el sabor auténtico de la Cerveza Cacique, perfecta para cualquier ocasión.</p>
+									<p class="price"><span>$220.00cup</span></p>
+									<p><a href="https://wa.link/alggly" class="btn btn-white btn-outline-white">Ordenar</a></p>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-4 text-center">
+							<div class="menu-wrap">
+								<a href="#" class="menu-img img mb-4" style="background-image: url(images/Casique.jpeg);"></a>
+								<div class="text">
+									<h3><a href="#">Cerveza Cacique</a></h3>
+									<p>Disfruta de la frescura y el sabor auténtico de la Cerveza Cristal, perfecta para cualquier ocasión.</p>
+									<p class="price"><span>$200.00cup</span></p>
+									<p><a href="https://wa.link/alggly" class="btn btn-white btn-outline-white">Ordenar</a></p>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-4 text-center">
+							<div class="menu-wrap">
+								<a href="#" class="menu-img img mb-4" style="background-image: url(images/Chanceller.jpg);"></a>
+								<div class="text">
+									<h3><a href="#">Shanceler</a></h3>
+									<p>Disfruta de la frescura y el sabor auténtico de la Cerveza Cristal, perfecta para cualquier ocasión.</p>
+									<p class="price"><span>$1500.00cup</span></p>
+									<p><a href="https://wa.link/alggly" class="btn btn-white btn-outline-white">Ordenar</a></p>
+								</div>
+							</div>
+						</div>
+
 						  <div class="col-md-4 text-center">
 							  <div class="menu-wrap">
 								  <a href="#" class="menu-img img mb-4" style="background-image: url(images/vino.jpg);"></a>
 								  <div class="text">
 									  <h3><a href="#">Vino</a></h3>
 									  <p>Explora nuestra selección de vinos finos, perfectos para acompañar tus comidas y celebraciones.</p>
-									  <p class="price"><span>$180.00cup</span></p>
+									  <p class="price"><span>$200.00cup</span></p>
 									  <p><a href="https://wa.link/8jilfn" class="btn btn-white btn-outline-white">Ordenar</a></p>
 								  </div>
 							  </div>
@@ -453,7 +490,7 @@
 								<div class="text">
 									<h3><a href="#">Refresco gaseado 400ml</a></h3>
 									<p>Disfruta de un refresco gaseado de 400ml, ideal para saciar tu sed en cualquier momento.</p>
-									<p class="price"><span>$1300.00cup</span></p>
+									<p class="price"><span>$220.00cup</span></p>
 									<p><a href="https://wa.link/uokbke" class="btn btn-white btn-outline-white">Ordenar</a></p>
 								</div>
 							</div>
@@ -464,7 +501,7 @@
 								<div class="text">
 									<h3><a href="#">Whisky Old Star</a></h3>
 									<p>Saborea la elegancia y el carácter del Whisky Old Star, una elección perfecta para los amantes del buen whisky.</p>
-									<p class="price"><span>$220.00cup</span></p>
+									<p class="price"><span>$1300.00cup</span></p>
 									<p><a href="https://wa.link/sq7pp7" class="btn btn-white btn-outline-white">Ordenar</a></p>
 								</div>
 							</div>
