--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 
 				  <a class="nav-link" id="v-pills-2-tab" data-toggle="pill" href="#v-pills-2" role="tab" aria-controls="v-pills-2" aria-selected="false">Bebidas</a>
 
-				  <a style="display: none;" class="nav-link" id="v-pills-3-tab" data-toggle="pill" href="#v-pills-3" role="tab" aria-controls="v-pills-3" aria-selected="false">Burgers</a>
+				  <a  class="nav-link" id="v-pills-3-tab" data-toggle="pill" href="#v-pills-3" role="tab" aria-controls="v-pills-3" aria-selected="false">Cigarros</a>
 
 				  <a style="display: none;" class="nav-link" id="v-pills-4-tab" data-toggle="pill" href="#v-pills-4" role="tab" aria-controls="v-pills-4" aria-selected="false">Pasta</a>
 				</div>
@@ -443,7 +443,7 @@
 								<div class="text">
 									<h3><a href="#">Cerveza Almara</a></h3>
 									<p>Disfruta de la frescura y el sabor auténtico de la Cerveza Cacique, perfecta para cualquier ocasión.</p>
-									<p class="price"><span>$220.00cup</span></p>
+									<p class="price"><span>$200.00cup</span></p>
 									<p><a href="https://wa.link/alggly" class="btn btn-white btn-outline-white">Ordenar</a></p>
 								</div>
 							</div>
@@ -455,7 +455,7 @@
 								<div class="text">
 									<h3><a href="#">Cerveza Cacique</a></h3>
 									<p>Disfruta de la frescura y el sabor auténtico de la Cerveza Cristal, perfecta para cualquier ocasión.</p>
-									<p class="price"><span>$200.00cup</span></p>
+									<p class="price"><span>$220.00cup</span></p>
 									<p><a href="https://wa.link/alggly" class="btn btn-white btn-outline-white">Ordenar</a></p>
 								</div>
 							</div>
@@ -465,9 +465,21 @@
 							<div class="menu-wrap">
 								<a href="#" class="menu-img img mb-4" style="background-image: url(images/Chanceller.jpg);"></a>
 								<div class="text">
-									<h3><a href="#">Shanceler</a></h3>
+									<h3><a href="#">Chanceler</a></h3>
 									<p>Disfruta de la frescura y el sabor auténtico de la Cerveza Cristal, perfecta para cualquier ocasión.</p>
 									<p class="price"><span>$1500.00cup</span></p>
+									<p><a href="https://wa.link/alggly" class="btn btn-white btn-outline-white">Ordenar</a></p>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-4 text-center">
+							<div class="menu-wrap">
+								<a href="#" class="menu-img img mb-4" style="background-image: url(images/Crema-de-bie.jpg);"></a>
+								<div class="text">
+									<h3><a href="#">Crema Belle</a></h3>
+									<p></p>
+									<p class="price"><span>$1600.00cup</span></p>
 									<p><a href="https://wa.link/alggly" class="btn btn-white btn-outline-white">Ordenar</a></p>
 								</div>
 							</div>
@@ -484,7 +496,7 @@
 								  </div>
 							  </div>
 						  </div>
-						  <div class="col-md-4 text-center">
+						  <div style="display: none;" class="col-md-4 text-center">
 							<div class="menu-wrap">
 								<a href="#" class="menu-img img mb-4" style="background-image: url(images/refrescodepomito.jpg);"></a>
 								<div class="text">
@@ -513,37 +525,90 @@
 					<div class="row">
 						  <div class="col-md-4 text-center">
 							  <div class="menu-wrap">
-								  <a href="#" class="menu-img img mb-4" style="background-image: url(images/burger-1.jpg);"></a>
+								  <a href="#" class="menu-img img mb-4" style="background-image: url(images/Popular-Rojo.jpg);"></a>
 								  <div class="text">
-									  <h3><a href="#">Itallian Pizza</a></h3>
-									  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-									  <p class="price"><span>$2.90</span></p>
-									  <p><a href="#" class="btn btn-white btn-outline-white">Add to cart</a></p>
+									  <h3><a href="#">Popular Rojo</a></h3>
+									  <p></p>
+									  <p class="price"><span>$200.00</span></p>
+									  <p><a href="#" class="btn btn-white btn-outline-white">Ordenar</a></p>
 								  </div>
 							  </div>
 						  </div>
 						  <div class="col-md-4 text-center">
 							  <div class="menu-wrap">
-								  <a href="#" class="menu-img img mb-4" style="background-image: url(images/burger-2.jpg);"></a>
+								  <a href="#" class="menu-img img mb-4" style="background-image: url(images/selecto.jpg);"></a>
 								  <div class="text">
-									  <h3><a href="#">Itallian Pizza</a></h3>
-									  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-									  <p class="price"><span>$2.90</span></p>
-									  <p><a href="#" class="btn btn-white btn-outline-white">Add to cart</a></p>
+									  <h3><a href="#">Selecto</a></h3>
+									  <p></p>
+									  <p class="price"><span>$200.00</span></p>
+									  <p><a href="#" class="btn btn-white btn-outline-white">Ordenar</a></p>
 								  </div>
 							  </div>
 						  </div>
 						  <div class="col-md-4 text-center">
 							  <div class="menu-wrap">
-								  <a href="#" class="menu-img img mb-4" style="background-image: url(images/burger-3.jpg);"></a>
+								  <a href="#" class="menu-img img mb-4" style="background-image: url(images/cigarro-popular.jpg);"></a>
 								  <div class="text">
-									  <h3><a href="#">Itallian Pizza</a></h3>
-									  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-									  <p class="price"><span>$2.90</span></p>
-									  <p><a href="#" class="btn btn-white btn-outline-white">Add to cart</a></p>
+									  <h3><a href="#">Popular de Bodega</a></h3>
+									  <p></p>
+									  <p class="price"><span>$130.00</span></p>
+									  <p><a href="#" class="btn btn-white btn-outline-white">Ordenar</a></p>
 								  </div>
 							  </div>
 						  </div>
+
+						  <div class="col-md-4 text-center">
+							<div class="menu-wrap">
+								<a href="#" class="menu-img img mb-4" style="background-image: url(images/Popular-verde.jpg);"></a>
+								<div class="text">
+									<h3><a href="#">Popular Verde</a></h3>
+									<p></p>
+									<p class="price"><span>$200.00</span></p>
+									<p><a href="#" class="btn btn-white btn-outline-white">Ordenar</a></p>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-4 text-center">
+							<div class="menu-wrap">
+								<a href="#" class="menu-img img mb-4" style="background-image: url(images/Rotheman-rojo.jpg);"></a>
+								<div class="text">
+									<h3><a href="#">Rothman Rojo</a></h3>
+									<p></p>
+									<p class="price"><span>$200.00</span></p>
+									<p><a href="#" class="btn btn-white btn-outline-white">Ordenar</a></p>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-4 text-center">
+							<div class="menu-wrap">
+								<a href="#" class="menu-img img mb-4" style="background-image: url(images/Rothman-Azul.jpg);"></a>
+								<div class="text">
+									<h3><a href="#">Rothman Azul</a></h3>
+									<p></p>
+									<p class="price"><span>$350.00</span></p>
+									<p><a href="#" class="btn btn-white btn-outline-white">Ordenar</a></p>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-4 text-center">
+							<div class="menu-wrap">
+								<a href="#" class="menu-img img mb-4" style="background-image: url(images/tabaco.jpg);"></a>
+								<div class="text">
+									<h3><a href="#">Tabaco</a></h3>
+									<p></p>
+									<p class="price"><span>$25.00</span></p>
+									<p><a href="#" class="btn btn-white btn-outline-white">Ordenar</a></p>
+								</div>
+							</div>
+						</div>
+
+<!--Cigarros -->
+
+<!--Cigarros -->
+						  
 					  </div>
 				  </div>
 
