--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   
 			<div class="col-md-6 col-sm-12 order-md-last ftco-animate">
 				<span class="subheading">Las Mejores</span>
-			  <h1 class="mb-4">Pizzas de Chorizo</h1>
+			  <h1 class="mb-4">Pizzas de Queso Extra</h1>
 			  <p class="mb-4 mb-md-5">¡Haz tu pedido y disfruta de una experiencia única!</p>
 			  <p style="display: none;"><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Ver ahora</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Ver Menu</a></p>
 			</div>
