--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	  </nav>
     <!-- END nav -->
 
-	<section   class="home-slider owl-carousel img" style="background-image: url(images/bg_1.jpg);">
+	<section  style="display: none;" class="home-slider owl-carousel img" style="background-image: url(images/bg_1.jpg);">
 		<div class="slider-item">
 			<div class="overlay"></div>
 		  <div class="container">
@@ -135,8 +135,8 @@
         </div>
         <div>
 			<p>En Doña Lucia, nos enorgullece ofrecerte una experiencia única, llena de sabor y tradición. Nuestra pizzería es más que un lugar para comer; es un espacio donde la calidad y la calidez se encuentran en cada bocado.</p>
-
-			
+			<p>🎉 **Sorteo de 10 Pizzas Gratis! 🍕🎉 Deve escribir su nombre</p>
+			<p><a href="https://wa.link/20wads" class="btn btn-white btn-outline-white">Sorteo</a></p>
 			
 			
 			</div>
@@ -167,16 +167,7 @@
     					</div>
     				</div>
     			</div>
-    			<div class="col-lg-4 d-flex ftco-animate">
-    				<div class="services-wrap d-flex">
-    					<a href="#" class="img" style="background-image: url(images/Pizza-de-Chorizo.jpg);"></a>
-    					<div class="text p-4">
-    						<h3>Pizza con Queso Extra y Chorizo</h3>
-    						<p>Saborea la combinación perfecta de queso extra y chorizo en cada bocado. Una delicia que no puedes dejar pasar.</p>
-    						<p class="price"><span>$160.00cup</span> <a href="https://wa.link/vqxg3a" class="ml-2 btn btn-white btn-outline-white">Ordenar</a></p>
-    					</div>
-    				</div>
-    			</div>
+    			
     			<div class="col-lg-4 d-flex ftco-animate">
     				<div class="services-wrap d-flex">
     					<a href="#" class="img" style="background-image: url(images/PizzaJamonyQueso6.jpg);"></a>
@@ -215,18 +206,7 @@
 	        			</div>
         			</div>
         		</div>
-        		<div class="pricing-entry d-flex ftco-animate">
-        			<div class="img" style="background-image: url(images/Pizza-de-Chorizo.jpg);"></div>
-        			<div class="desc pl-3">
-	        			<div class="d-flex text align-items-center">
-	        				<h3><span>Pizza de Chorizo</span></h3>
-	        				<span class="price">$160.00cup</span>
-	        			</div>
-	        			<div class="d-block">
-	        				<p>Queso extra y chorizo en cada bocado. Una delicia que no puedes dejar pasar.</p>
-	        			</div>
-	        		</div>
-        		</div>
+        		
         		<div class="pricing-entry d-flex ftco-animate">
         			<div class="img" style="background-image: url(images/pizza-3.jpg);"></div>
         			<div class="desc pl-3">
@@ -397,7 +377,7 @@
 								  </div>
 							  </div>
 						  </div>
-						  <div class="col-md-4 text-center">
+						  <div style="display: none;" class="col-md-4 text-center">
 							  <div class="menu-wrap">
 								  <a href="#" class="menu-img img mb-4" style="background-image: url(images/Pizza-de-Chorizo.jpg);"></a>
 								  <div class="text">
