--- a/index.html
+++ b/index.html
@@ -509,22 +509,24 @@
 								  <div class="text">
 									  <h3><a href="#">Popular Rojo</a></h3>
 									  <p></p>
-									  <p class="price"><span>$200.00</span></p>
+									  <p class="price"><span>$220.00</span></p>
 									  <p><a href="#" class="btn btn-white btn-outline-white">Ordenar</a></p>
 								  </div>
 							  </div>
 						  </div>
+						  
 						  <div class="col-md-4 text-center">
-							  <div class="menu-wrap">
-								  <a href="#" class="menu-img img mb-4" style="background-image: url(images/selecto.jpg);"></a>
-								  <div class="text">
-									  <h3><a href="#">Selecto</a></h3>
-									  <p></p>
-									  <p class="price"><span>$200.00</span></p>
-									  <p><a href="#" class="btn btn-white btn-outline-white">Ordenar</a></p>
-								  </div>
-							  </div>
-						  </div>
+							<div class="menu-wrap">
+								<a href="#" class="menu-img img mb-4" style="background-image: url(images/HUpmansinfiltro.jpeg);"></a>
+								<div class="text">
+									<h3><a href="#">Hupman sin Filtro</a></h3>
+									<p></p>
+									<p class="price"><span>$200.00</span></p>
+									<p><a href="#" class="btn btn-white btn-outline-white">Ordenar</a></p>
+								</div>
+							</div>
+						</div>
+
 						  <div class="col-md-4 text-center">
 							  <div class="menu-wrap">
 								  <a href="#" class="menu-img img mb-4" style="background-image: url(images/cigarro-popular.jpg);"></a>
