--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
 									  <h3><a href="#">Popular Rojo</a></h3>
 									  <p></p>
 									  <p class="price"><span>$220.00</span></p>
-									  <p><a href="#" class="btn btn-white btn-outline-white">Ordenar</a></p>
+									  <p><a href="https://wa.link/0f6k8a" class="btn btn-white btn-outline-white">Ordenar</a></p>
 								  </div>
 							  </div>
 						  </div>
@@ -519,7 +519,7 @@
 							<div class="menu-wrap">
 								<a href="#" class="menu-img img mb-4" style="background-image: url(images/HUpmansinfiltro.jpeg);"></a>
 								<div class="text">
-									<h3><a href="#">Hupman sin Filtro</a></h3>
+									<h3><a href="https://wa.link/cqx0cv">Hupman sin Filtro</a></h3>
 									<p></p>
 									<p class="price"><span>$200.00</span></p>
 									<p><a href="#" class="btn btn-white btn-outline-white">Ordenar</a></p>
@@ -534,19 +534,19 @@
 									  <h3><a href="#">Popular de Bodega</a></h3>
 									  <p></p>
 									  <p class="price"><span>$130.00</span></p>
-									  <p><a href="#" class="btn btn-white btn-outline-white">Ordenar</a></p>
+									  <p><a href="https://wa.link/v5fgrn" class="btn btn-white btn-outline-white">Ordenar</a></p>
 								  </div>
 							  </div>
 						  </div>
 
-						  <div class="col-md-4 text-center">
+						  <div style="display: none;" class="col-md-4 text-center">
 							<div class="menu-wrap">
 								<a href="#" class="menu-img img mb-4" style="background-image: url(images/Popular-verde.jpg);"></a>
 								<div class="text">
 									<h3><a href="#">Popular Verde</a></h3>
 									<p></p>
 									<p class="price"><span>$200.00</span></p>
-									<p><a href="#" class="btn btn-white btn-outline-white">Ordenar</a></p>
+									<p><a href="https://wa.link/p816r0" class="btn btn-white btn-outline-white">Ordenar</a></p>
 								</div>
 							</div>
 						</div>
@@ -558,7 +558,7 @@
 									<h3><a href="#">Rothman Rojo</a></h3>
 									<p></p>
 									<p class="price"><span>$200.00</span></p>
-									<p><a href="#" class="btn btn-white btn-outline-white">Ordenar</a></p>
+									<p><a href="https://wa.link/m24w78" class="btn btn-white btn-outline-white">Ordenar</a></p>
 								</div>
 							</div>
 						</div>
@@ -570,7 +570,7 @@
 									<h3><a href="#">Rothman Azul</a></h3>
 									<p></p>
 									<p class="price"><span>$350.00</span></p>
-									<p><a href="#" class="btn btn-white btn-outline-white">Ordenar</a></p>
+									<p><a href="https://wa.link/97vf61" class="btn btn-white btn-outline-white">Ordenar</a></p>
 								</div>
 							</div>
 						</div>
@@ -582,7 +582,7 @@
 									<h3><a href="#">Tabaco</a></h3>
 									<p></p>
 									<p class="price"><span>$25.00</span></p>
-									<p><a href="#" class="btn btn-white btn-outline-white">Ordenar</a></p>
+									<p><a href="https://wa.link/zp5ecw" class="btn btn-white btn-outline-white">Ordenar</a></p>
 								</div>
 							</div>
 						</div>
