--- a/WEB/ComboLista/ComboLista.html
+++ b/WEB/ComboLista/ComboLista.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Combos de Alimentos</title>
+    <meta property="og:title" content="Doña Lucia | Los Mejores Precios">
+  <meta property="og:description" content="Arroz, Frijoles, Carnes, Lácteos y mucho mas...">
+ 
+  <meta property="og:image" content="https://i.postimg.cc/26F16c26/Imagen-de-Whats-App-2024-10-06-a-las-14-43-10-c3ff09c7.jpg">
+  <meta property="og:url" content="https://donalucia55.github.io/AppPizzas/WEB/ComboLista/ComboLista.html">
     <style>
         body {
             font-family: 'Arial', sans-serif;
