--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	  </nav>
     <!-- END nav -->
 
-	<section  style="display: none;" class="home-slider owl-carousel img" style="background-image: url(images/bg_1.jpg);">
+	<section  class="home-slider owl-carousel img" style="background-image: url(images/bg_1.jpg);">
 		<div class="slider-item">
 			<div class="overlay"></div>
 		  <div class="container">
