--- a/WEB/LandingpagedeCombos/index.html
+++ b/WEB/LandingpagedeCombos/index.html
@@ -106,7 +106,7 @@
             <img src="https://i.postimg.cc/26F16c26/Imagen-de-Whats-App-2024-10-06-a-las-14-43-10-c3ff09c7.jpg" alt="Combos de Alimentos para tus Seres Queridos en Cuba">
             <div class="header-actions">
                 <p><i class="fas fa-gift"></i> Ofertas Especiales de Combos de Alimentos para tus Seres Queridos en Cuba. ¿Quieres enviar un regalo especial a tus familiares en Cuba? ¡Tenemos la solución perfecta para ti!</p>
-                <a href="https://donalucia55.github.io/AppPizzas/WEB/ComboLista/ComboLista.html" target="_blank" class="btn"><i class="fas fa-shopping-cart"></i> Ver Productos</a>
+                <a href="https://donalucia55.github.io/AppPizzas/WEB/ComboLista/ComboLista.html" target="_blank" class="btn"><i class="fas fa-shopping-cart"></i> Ver Precios</a>
             </div>
         </div>
     </header>
@@ -212,7 +212,7 @@
 
     <footer>
         <p>¡No esperes más! ⏳ Envía hoy mismo un combo personalizado y haz feliz a tus familiares en Cuba. Para más información y para realizar tu pedido, contácteme al 55189657 y paga fácilmente mediante Zelle.</p>
-        <a href="https://donalucia55.github.io/AppPizzas/WEB/ComboLista/ComboLista.html" target="_blank">Ver lista de productos disponibles</a>
+        <a href="https://donalucia55.github.io/AppPizzas/WEB/ComboLista/ComboLista.html" target="_blank" class="btn"><i class="fas fa-shopping-cart"></i> Ver Precios de Productos Disponibles</a>
     </footer>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
