--- a/WEB/LandingpagedeCombos/index.html
+++ b/WEB/LandingpagedeCombos/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Combos de Alimentos para tus Seres Queridos en Cuba</title>
+    <title>COMB8OS DOÑA LUCIA</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <meta property="og:image" content="https://i.postimg.cc/26F16c26/Imagen-de-Whats-App-2024-10-06-a-las-14-43-10-c3ff09c7.jpg">
+    <link rel="icon" href="https://i.postimg.cc/cHr4Gmr3/Logo-Do-a-Lucia-rojo.png" type="image/x-icon">
+    <meta property="og:image" content="https://i.postimg.cc/v8zpTwdQ/banner1.jpg">
     <meta property="og:image:alt" content="Combos de Alimentos para tus Seres Queridos en Cuba">
     <style>
         body {
@@ -224,7 +225,7 @@ body {
 <body>
     <header>
         <div class="header-content">
-            <img src="https://i.postimg.cc/26F16c26/Imagen-de-Whats-App-2024-10-06-a-las-14-43-10-c3ff09c7.jpg" alt="Combos de Alimentos para tus Seres Queridos en Cuba">
+            <img src="https://i.postimg.cc/v8zpTwdQ/banner1.jpg" alt="Combos de Alimentos para tus Seres Queridos en Cuba">
             <div class="header-actions">
                 <p><i class="fas fa-gift"></i> Ofertas Especiales de Combos de Alimentos para tus Seres Queridos en Cuba. ¿Quieres enviar un regalo especial a tus familiares en Cuba? ¡Tenemos la solución perfecta para ti!</p>
                 <a href="https://donalucia55.github.io/AppPizzas/WEB/ComboLista/ComboLista.html" target="_blank" class="btn"><i class="fas fa-shopping-cart"></i> Ver Productos</a>
